@@ -8,3 +8,5 @@ See:
 distro/config/apkg.toml
 distro/vars/*.py
 distro/pkg/deb/changelog
+distro/pkg/rpm/*.spec
+distro/pkg/arch/PKGBUILD
