@@ -4,7 +4,15 @@ apkg-ex-template-variables ({{ version }}-{{ release }}~{{ deb_series }}) {{ deb
   * custom variables: {{ custom_int }}, {{ custom_float }}, {{ custom_bool }}, {{ custom_str }}
   * custom functions: 1 + 2 == {{ custom_fun_add(1, 2) }}, {{ custom_fun_echo('ECHO') }}
 {%- if distro_like  %}
-  * distro_like: {{ distro_like }}
+  * distro_like: {{ distro_like.names | join(', ') }}
+{%- if distro_like.match('debian') %}
+  * debian-like distro
+{%- endif %}
+{%- if distro_like.match('ubuntu') %}
+  * debian-like distro
+{%- endif %}
+{%- else %}
+  * distro_like is unavailable - probably building for different distro than host
 {%- endif %}
 
 
